--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,29 @@ body{
     background-color: rgb(119, 255, 119);
 }
 
-.nav-link{
+/* .nav-link{
     color: rgb(10, 10, 168);
+}*/
+
+.quem-somos{
+    background-color: #f4941f;
+}
+
+.servicos{
+    background-color: rgb(196, 183, 183);
+    color: #000000;
+}
+
+.parceiros{
+    background-color: rgb(1, 1, 85);
+    color: #ffffff;
+
+}
+
+.ibm{
+    margin-top: 30px;
+}
+
+.margin{
+    padding: 10px;
 }
